--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,7 +10,7 @@
 <button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
 </form>
 </div>
-<a href="/opportunities">Back</a>  
+<a href="/opportunities">Go Back</a>  
     </div>
 </div>
-<% include partials/footer %>
+<% include partials/footer %> 
