--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,7 +3,7 @@
 <h1>Welcome to Abroad Connect!</h1>
 
 <p>A marketplace for connecting students of diverse ethnic and gender backgrounds to study abroad opportunities, 
-    funds, and community</p>
+    funds, and community.</p>
 
     <a href="/opportunities">View Opportunities</a>
 
