--- a/views/opportunities/show.ejs
+++ b/views/opportunities/show.ejs
@@ -17,6 +17,13 @@
                                 <h4><a><%= opportunity.name %></a></h4>
                                 <p><%= opportunity.description %></p>
                                 <p><%= opportunity.link %></p>
+                                <p><em>Submitted by, <%= opportunity.author.username %></em></p>
+                                <% if(currentUser && opportunity.author.id.equals(currentUser._id)){  %>
+                                <a class="btn btn-xs btn btn-warning" href="/opportunities/<%= opportunity._id %>/edit">Edit</a>
+                                <form id='delete-form' action='/opportunities/<%= opportunity._id %>?_method=DELETE' method='POST'>
+                                    <button class="btn btn-xs btn btn-danger">Delete</button>
+                                </form>
+                            <% } %>
                             </div>
                     </div>
                     <div class="well">
@@ -27,11 +34,19 @@
                                 <% opportunity.comments.forEach(function(comment){ %>
                                 <div class="row">
                                     <div class="col-md-12">
-                                            <strong><%= comment.author %></strong>
+                                            <strong><%= comment.author.username %></strong>
                                             <span class="pull-right">10 days </span>
                                             <p>
                                                 <%= comment.text %>
                                             </p>
+                                    <% if(currentUser && comment.author.id.equals(currentUser._id)){  %>
+                                            <a class="btn btn-xs btn-warning" 
+                                               href="/opportunities/<%=opportunity._id %>/comments/<%=comment._id%>/edit">
+                                            Edit</a>
+                                            <form class="delete-form" action="/opportunities/<%=opportunity._id %>/comments/<%=comment._id%>?_method=DELETE" method="POST">
+                                                <input type="submit" class="btn btn-xs btn-danger" value="Delete">
+                                            </form>
+                                        <%  }  %>
                                     </div>
                                 </div>
                                 
