--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 <div class="row">
-  <h1 style="text-align: center;">Sign Up</h1>
+  <h1 style="text-align: center;">Login</h1>
   <div style="width: 30%; margin: 25px auto">
       <form action="/login" method="post">
           <div class="form-group">
@@ -10,7 +10,7 @@
               <input class="form-control" type="text" name="password" placeholder="password">
           </div>
     <div class="form-group">
-            <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
+            <button class="btn btn-lg btn-primary btn-block">Login</button>
             </div>
         </form>
         <a href="/opportunities">Go Back<a/>
