--- a/views/opportunities/show.ejs
+++ b/views/opportunities/show.ejs
@@ -13,7 +13,7 @@
                     <div class="thumbnail">
                             <img class="img-responsive" src="<%= opportunity.image %>">
                             <div class="caption-full">
-                                <h4 class="pull-right">$<%= opportunity.price %> </h4>
+                                <h4 class="pull-right">$<%= opportunity.price %></h4>
                                 <h4><a><%= opportunity.name %></a></h4>
                                 <p><%= opportunity.description %></p>
                                 <p><%= opportunity.link %></p>
@@ -26,10 +26,12 @@
                             <% } %>
                             </div>
                     </div>
+              <% if(currentUser && currentUser.isAdmin){  %>
                     <div class="well">
                             <div class="text-right">
                                 <a class="btn btn-success" href="/opportunities/<%= opportunity._id %>/comments/new">Add New Comment</a>
                             </div>
+                            <% } %>
                             <hr>
                                 <% opportunity.comments.forEach(function(comment){ %>
                                 <div class="row">
