--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -27,7 +27,7 @@
         <a href="/opportunities" class="btn btn-lg btn-success">View All Opportunities</a>
         <a href="#" target="_blank" class="btn btn-lg btn-warning">Check out our blog!</a>
         <a href="about" target="_blank" class="btn btn-lg btn-danger">About Abroad Connect</a>
-        <a href="mailto:gilbertking91@gmail.com" class="btn btn-lg btn-primary">Share Opportunity</a>
+        <a href="mailto:boyledanielle1@gmail.com" class="btn btn-lg btn-primary">Share Opportunity</a>
     </div>
 
     <ul class="slideshow">
