--- a/views/opportunities/edit.ejs
+++ b/views/opportunities/edit.ejs
@@ -17,6 +17,9 @@
 <div class ="form-group">
     <input class="form-control"type="text" name="opportunity[description]" value="<%= opportunity.description %>">
     </div>
+    <div class="form-group">
+        <input class="form-control" type="number" name="opportunity[price]" value="<%= opportunity.price %>" min="0.01" step="0.01">
+    </div>
 <div class="form-group">
     <button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
 </div>
