--- a/views/opportunities/index.ejs
+++ b/views/opportunities/index.ejs
@@ -3,12 +3,14 @@
 <div class="container">
 <header class="jumbotron">
         <div class="container">
-        <h1>Welcome to The Opportunity</h1>
-        <p>View scholarship opportunities</p>
+        <h1>Welcome to The Opportunity Page</h1>
+        <p>View scholarship and travel abroad opportunities</p>
+
+        <% if(currentUser && currentUser.isAdmin){ %>
         <p>
                 <a class="btn btn-primary btn-lg" href="/opportunities/new">Add New Opportunity</a>
         </p>
-
+          <% } %>
 </header>
 
 
