--- a/views/opportunities/new.ejs
+++ b/views/opportunities/new.ejs
@@ -16,7 +16,7 @@
                     <input class="form-control" type="text" name="link" placeholder="link">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="price" placeholder="price">
+                    <input class="form-control" type="number" name="price" placeholder="price" min="0.01" step="0.01">
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">Submit!</button>
