--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,8 @@
 <% include ./partials/header %>
 
 <h1 style="text-align: center;">About Abroad Connect</h1>
-<<h4>Video Goes Here</h4>
+<img src="">
+<h4 style="text-align: center;">Video Goes Here</h4>
 
 <p style="text-align: center; ">
 Abroad Connect is a social network designed to connect students of underrepresented backgrounds to travel abroad opportunities, scholarships 
@@ -10,7 +11,7 @@ while you take interesting and required courses with advance options.
 
 Since its creation in 2018 Abroad Connect aims to ... Created By Danielle Boyle . . . 
 </p>
-<a href="/opportunities">Back</a>
+<a style="text-align: center;" href="/opportunities">Back</a>
 
 
 <% include ./partials/footer %>
