--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,10 +1,11 @@
 <% include ./partials/header %>
-
+<div class="container">
+    <div class="row">
 <h1 style="text-align: center;">About Abroad Connect</h1>
 <img src="">
 <h4 style="text-align: center;">Video Goes Here</h4>
-
-<p style="text-align: center; ">
+<div>
+<p style="text-align: center;">
 Abroad Connect is a social network designed to connect students of underrepresented backgrounds to travel abroad opportunities, scholarships 
 and the network necessary to grow up with a diverse experiences in multiple environments. Challenge yourself and your peers 
 while you take interesting and required courses with advance options. 
@@ -12,6 +13,8 @@ while you take interesting and required courses with advance options.
 Since its creation in 2018 Abroad Connect aims to ... Created By Danielle Boyle . . . 
 </p>
 <a style="text-align: center;" href="/opportunities">Back</a>
-
+</div>
+</div>
+</div>
 
 <% include ./partials/footer %>
