--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                   <ul class="nav navbar-nav">
                     <li><a href="#" type="button">Abroad Connect</a></li>
-                    <li><a href="/opportunities" type="button">Home</a></li>
+                    <li><a href="/opportunities" type="button">Home: fix the navbar bro</a></li>
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon"></span></a></li>
