production db functional

--- a/views/opportunities/index.ejs
+++ b/views/opportunities/index.ejs
@@ -3,8 +3,8 @@
 <div class="container">
 <header class="jumbotron">
         <div class="container">
-        <h1>Welcome to The Opportunity Page</h1>
-        <p>View scholarship and travel abroad opportunities</p>
+        <h1>Welcome to the Opportunity Page!</h1>
+        <p>View scholarships and travel abroad opportunities</p>
 
         <% if(currentUser && currentUser.isAdmin){ %>
         <p>
