--- a/views/opportunities/show.ejs
+++ b/views/opportunities/show.ejs
@@ -13,7 +13,7 @@
                     <div class="thumbnail">
                             <img class="img-responsive" src="<%= opportunity.image %>">
                             <div class="caption-full">
-                                <h4 class="pull-right">$<%= opportunity.price %></h4>
+                                <h4 class="pull-right">Scholarship Amount $<%= opportunity.price %></h4>
                                 <h4><a><%= opportunity.name %></a></h4>
                                 <p><%= opportunity.description %></p>
                                 <p><%= opportunity.link %></p>
