--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,58 +1,73 @@
 <!DOCTYPE html>
-            <html lang="en">
-            <head>
-              <title> Welcome to Abroad Connect</title>
-              <meta charset="utf-8">
-              <meta name="viewport" content="width=device-width, initial-scale=1.0">
-              <link rel="stylesheet/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-              <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-            <link rel="stylesheet" href="/stylesheets/main.css">
-            <style>
-              #nav{
-                background-color:318fbd;
-              }
-            </style>
-            </head>
-            <body>
-            <nav class="navbar navbar-default">
-              <div class="container-fluid">
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="#"></a>
-                </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                  <ul class="nav navbar-nav">
-                    <li><a href="/" type="button">Abroad Connect</a></li>
-                    <li><a href="/opportunities" type="button">Home</a></li>
-                    <li><a href="/about" type="button">About</a></li>
-                  </ul>
-                  <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon"></span></a></li>
-                    <% if(!currentUser){ %>
-                  <li><a href="/register">Sign Up</span></a></li>
-
-                    <li><a href="/login" >Log In</span></a></li>
-                    <% } else { %>
-                    <li><a href="/logout">Log Out</span></a></li>
-                    <li><a href="#">Signed in as, <%= currentUser.username %></a></li>
-                  <%  } %>
-                  </ul>
-                </div>
-              </div>
-            </nav>
-            <div class="container">
-              <% if(error && error.length > 0){%>
-              <div class="alert alert-danger" role="alert">
-                <%= error %>
-              </div>
-              <% } %>
-              <% if(success && success.length > 0){%>
-              <div class="alert alert-success" role="alert">
-                <%= success %>
-              </div>
-              <% } %>
-            </div>
+<html lang="en">
+  <head>
+        <title> Welcome to Abroad Connect</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <link rel="stylesheet" href="/stylesheets/main.css">
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <style>
+        #nav{
+          background-color:318fbd;
+          
+        }
+        .h1 {
+          text-align:center;
+        }
+      </style>
+  </head>
+  <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Abroad Connect</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about">About</a>
+        </li>
+        <li class="nav-item">
+            <% if(!currentUser){ %>
+          <a class="nav-link" href="/register">Signup</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+        <% } else { %>
+        <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+            <li><a href="#">Signed in as, <%= currentUser.username %></a></li>
+            <%  } %>
+          </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link" href="/login" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href=""></a>
+            <a class="dropdown-item" href=""></a>
+            <a class="dropdown-item" href=""></a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container-fluid">
+      <% if(error && error.length > 0){%>
+      <div class="alert alert-danger" role="alert">
+        <%= error %>
+      </div>
+      <% } %>
+      <% if(success && success.length > 0){%>
+      <div class="alert alert-success" role="alert">
+        <%= success %>
+      </div>
+      <% } %>
+    </div>
