--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -1,16 +1,20 @@
 <% include ./partials/header %>
 <div class="row">
-  <div style="width: 30%; margin: 25px auto">
-      <h1 style="text-align:center;">Forgot Password</h1>
-      <form action="/reset" method="post">
-          <div class="form-group">
-              <input class="form-control" type="text" name="email" placeholder="email">
-          </div>
-    <div class="form-group">
-            <button class="btn btn-lg btn-primary btn-block">Reset Password</button>
-            </div>
-        </form>
-        <a href="/opportunities">Go Back<a/>
-  </div>
-  </div>
+	<div class="col-md-12">
+		<form action="/reset/<%= token %>" method="POST">
+		  <legend>Reset Password</legend>
+		  <div class="form-group">
+		    <label for="password">New Password</label>
+		    <input type="password" name="password" value="" placeholder="New password" autofocus="autofocus" class="form-control"/>
+		  </div>
+		  <div class="form-group">
+		    <label for="confirm">Confirm Password</label>
+		    <input type="password" name="confirm" value="" placeholder="Confirm password" class="form-control"/>
+		  </div>
+		  <div class="form-group">
+		    <button type="submit" class="btn btn-primary">Update Password</button>
+		  </div>
+		</form>
+	</div>
+</div>
 <% include ./partials/footer %>
