--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -2,7 +2,7 @@
 <div class="row">
   <div style="width: 30%; margin: 25px auto">
       <h1 style="text-align:center;">Forgot Password</h1>
-      <form action="/reset" method="post">
+      <form action="/forgot" method="POST">
           <div class="form-group">
               <input class="form-control" type="text" name="email" placeholder="email">
           </div>
@@ -10,7 +10,6 @@
             <button class="btn btn-lg btn-primary btn-block">Reset Password</button>
             </div>
         </form>
-        <a href="/opportunities">Go Back<a/>
   </div>
   </div>
 <% include ./partials/footer %>
