--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<%- include("partials/header") %>
 <div class="container">
     <div class="row">
 <div>
@@ -15,4 +15,4 @@ Since its creation in 2018 Abroad Connect aims to ... Created By Danielle Boyle 
 </div>
 </div>
 
-<% include ./partials/footer %>
+<%- include("partials/footer") %>
