--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async="true"></script>
     </head>
     <body>
     <div class="container">
@@ -27,6 +27,7 @@
 
        <a href="/opportunities" class="btn btn-lg btn">View All Opportunities</a>
        <a href="#" target="_blank" class="btn btn-lg btn ">Check out our blog!</a>
+       <a href="#" target="_blank" class="btn btn-lg btn ">Subscrtibe</a>
        <a href="about" target="_blank" class="btn btn-lg btn">About Abroad Connect</a>
        <a href="mailto:boyledanielle1@gmail.com" class="btn btn-lg btn">Share Opportunity</a>
    </div>
