--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<%- include("partials/header") %>
 <div class="row">
   <div style="width: 30%; margin: 25px auto">
       <h1 style="text-align: center;">Sign Up</h1>
@@ -19,4 +19,4 @@
         <a href="/opportunities">Go Back<a/>
   </div>
   </div>
-<% include ./partials/footer %>
+  <%- include("partials/footer") %>
