--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ("partials/header") %>
 <div class="row">
   <div style="width: 30%; margin: 25px auto">
       <h1 style="text-align:center;">Forgot Password</h1>
@@ -12,4 +12,4 @@
         </form>
   </div>
   </div>
-<% include ./partials/footer %>
+  <%- include("partials/footer") %>
